--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "java.project.sourcePaths": [
         "src",
-        "Basics"
+        "Basics",
+        "Practice"
     ],
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
